Add ability to use raw file paths to send video and animations.
Signed-off-by: Matthew Skinner <matt@pcmus.com>